# facial-expressions

./: README.md  main.py  pyproject.toml
model/: __init__.py  emotion_classifier.py
static/: index.css  index.html
static/js/: app.js  jsh.js
