[project]
name = "facial-expressions"
version = "0.1.0"
description = ""
authors = [{ name = "Nathan", email = "natmfat@gmail.com" }]
requires-python = ">=3.10.0,<3.11"
dependencies = [
  "numpy>=1.22.2,<2",
  "urllib3>=1.26.12,<2",
  "torch>=2.0.0,<3",
  "fastapi[standard]",
]

[dependency-groups]
dev = [
  "debugpy>=1.6.2,<2",
  "replit-python-lsp-server[yapf, rope, pyflakes]>=1.5.9,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["model/"] # Replace "src/my_package" with the actual path

[tool.uv.workspace]
members = ["test"]
